Update footer text and fix alert syntax

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <button onclick="changeMessage()">点我一下 🎁</button>
 
-    <div class="footer">Made with ❤️</div>
+    <div class="footer">Made with 高宇翔</div>
   </div>
 
   <script>
@@ -103,8 +103,8 @@
     }
 
     function changeMessage() {
-      alert("🎂 生日快乐！🎂“);
-            }
-            </script>
+      alert("🎂 生日快乐！🎂“）；
+    }
+  </script>
 </body>
 </html>
