--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <title>生日快乐 🎂</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
@@ -15,7 +15,7 @@
       font-family: "Helvetica Neue", Arial, sans-serif;
     }
 
-    .cad {
+    .card {
       background: white;
       border-radius: 20px;
       padding: 40px 30px;
@@ -26,84 +26,116 @@
       animation: fadeIn 1.2s ease;
     }
 
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.05rem;
-      line-height: 1.7;
-      color: #444;
-    }
-
-    .name {
-      color: #ff6f61;
-      font-weight: bold;
-    }
+    h1 { font-size: 2.2rem; }
 
     button {
       margin-top: 25px;
       padding: 12px 28px;
       font-size: 1rem;
       border: none;
-      border-radius; 30px;
+      border-radius: 30px;
       background: #ff6f61;
       color: white;
       cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
     }
 
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    .cake {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: conic-gradient(#ff6f61, #feca57, #1dd1a1, #54a0ff, #ff6f61);
+      animation: spin 1.5s linear infinite;
+      margin: 0 auto;
     }
 
-    .footer {
-      margin-top: 20px;
-      font-size: 0.8rem;
-      color: #aaa;
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
 
-    @keyframes fadein {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    .candle {
+      width: 10px;
+      height: 30px;
+      background: #fff;
+      margin: 0 auto -5px;
+      border-radius: 3px;
+      position: relative;
     }
-    </style>
+
+    .candle::after {
+      content: "";
+      width: 12px;
+      height: 12px;
+      background: radial-gradient(circle, #ffd700 0%, #ff8c00 60%, transparent 70%);
+      position: absolute;
+      top: -10px;
+      left: -1px;
+      border-radius: 50%;
+      animation: flame 0.6s infinite alternate;
+    }
+
+    @keyframes flame {
+      from { transform: scale(1); opacity: 1; }
+      to { transform: scale(1.3); opacity: 0.8; }
+    }
+
+    .confetti::before {
+      content: "🎉 🎊 🎉 🎊 🎉";
+      display: block;
+      font-size: 1.5rem;
+      margin-top: 10px;
+      animation: fadeIn 1.5s ease;
+    }
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
   <div class="card">
     <h1>🎉 生日快乐 🎉</h1>
     <p>
-      辛苦了， <span class="name" id="name">老爸</span>: <br /><br />
+      辛苦了，<span class="name" id="name">老爸</span>：<br /><br />
       感谢您一直以来的操劳，
-      用汗水撑起这个家。 <br />
+      用汗水撑起这个家。<br />
       在今天这个特殊的日子里，
       祝老爸生日快乐，身体健康，<br />
-      天天开心 🌸
-    </p>
+      平安顺遂，天天开心 🌸
+    </p >
 
-    <button onclick="changeMessage()">点我一下 🎁</button>
+    <button onclick="showCake()">点我一下 🎁</button>
+
+    <div id="cakeBox" style="display:none; margin-top:30px; position:relative;">
+      <div class="candle"></div>
+      <div class="cake"></div>
+      <div class="confetti"></div>
+      <p style="margin-top:15px; color:#d35400; font-weight:bold;">
+        🎂 祝老爸生日快乐，天天平安喜乐 🌸
+      </p >
+    </div>
+      <p style="margin-top:15px; color:#d35400; font-weight:bold;">
+        🎂 祝老爸生日快乐，天天平安喜乐 🌸
+      </p >
+    </div>
 
     <div class="footer">Made with 高宇翔</div>
   </div>
 
   <script>
-    // 从网址参数中读取名字，例如 ？name=小明
     const params = new URLSearchParams(window.location.search);
     const name = params.get("name");
     if (name) {
       document.getElementById("name").textContent = name;
     }
 
-    function changeMessage() {
-      alert("🎂 生日快乐！🎂“）；
+    function showCake() {
+      const box = document.getElementById("cakeBox");
+      box.style.display = "block";
+
+      // 3 秒后停止旋转
+      setTimeout(() => {
+        const cake = document.querySelector('.cake');
+        cake.style.animation = 'none';
+      }, 3000);
     }
   </script>
 </body>
