--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
 
       <div class="blessing">
-        🎂 祝老爸生日快乐，天天平安喜乐 🌸
+        🎂 祝老爸生日快乐，天天 🌸
       </div>
     </div>
   </div>
