Remove '天天' from birthday wishes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       用汗水撑起这个家。<br />
       在今天这个特殊的日子里，<br />
       祝老爸生日快乐，身体健康，<br />
-      平安顺遂，天天开心 🌸
+      平安顺遂， 🌸
     </p >
 
     <button onclick="showCake()">点我一下 🎁</button>
@@ -170,7 +170,7 @@
       </div>
 
       <div class="blessing">
-        🎂 祝老爸生日快乐，天天 🌸
+        🎂 祝老爸生日快乐 🌸
       </div>
     </div>
   </div>
